--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -19,7 +19,7 @@
 
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script>
-        const orderData = [];
+        let totalOrderCount = [[${totalOrderCount}]];
 
 
         // 캔버스 요소에서 그래픽 컨텍스트를 가져옵니다.
@@ -27,7 +27,7 @@
         // 그래프에 사용될 데이터를 선언합니다.
         let datasets = [{
             label: '공정 총 건수',  // 데이터셋 1의 레이블
-            data: [10, 20, 30, 40, 50],  // 데이터셋 1의 데이터
+            data: [totalOrderCount], //
         }, {
             label: '공정 완제품 건수',  // 데이터셋 2의 레이블
             data: [40, 30, 20, 10, 0],  // 데이터셋 2의 데이터
@@ -40,7 +40,7 @@
         let myChart = new Chart(ctx, {
             type: 'line',  // 선 그래프 유형을 설정합니다.
             data: {
-                labels: ['02-05', '02-06', '02-07', '02-08', '02-09'],  // x축 레이블을 설정합니다.
+                labels: ['02-05', '02-06', '02-07', '02-08', '02-09','02-10','02-11','02-12','02-13','02-14'],  // x축 레이블을 설정합니다.
                 datasets,  // 데이터셋을 설정합니다.
             }
         });
