--- a/src/main/resources/templates/process/processList.html
+++ b/src/main/resources/templates/process/processList.html
@@ -2,8 +2,8 @@
 <div class="container mb-5" layout:fragment="content">
     <h2 class="py-4">공정 결과</h2>
     <div class="mb-3">
-        <a href="#" th:href="@{/quality/{id}/check(id=${orderId})}" th:disabled="${qualityCheckCount}<0" class="btn btn-refoam ms-auto" role="button">전체 품질검수</a>
-        <!--th:disabled="${qualityCheckCount}==null"-->
+        <a href="#" th:href="@{/quality/{id}/check(id=${orderId})}" th:disabled="${qualityCheckCount<0}" class="btn btn-refoam ms-auto" role="button">전체 품질검수</a>
+        <!--th:disabled="${qualityCheckCount==null}"-->
     </div>
     <div class="table-responsive table-lg">
         <table class="table table-hover table-striped">
