--- a/src/main/resources/templates/employee/editEmployeeForm.html
+++ b/src/main/resources/templates/employee/editEmployeeForm.html
@@ -31,6 +31,19 @@
                 <label class="form-label fw-bold" th:for="*{email}">연락처</label>
                 <input type="text" class="form-control" th:field="*{email}" th:placeholder="*{email}">
             </div>
+            <div class="mb-3">
+                <p class="form-label fw-bold"> 메일 알림 체크</p>
+                <div class="form-check form-check-inline">
+                    <input class="form-check-input" type="radio" th:field="*{sendMail}" id="inlineRadio1"
+                           th:checked="${sendMail == True}" value="yes">
+                    <label class="form-check-label" th:for="*{sendMail}" >사용</label>
+                </div>
+                <div class="form-check form-check-inline">
+                    <input class="form-check-input" type="radio" th:field="*{sendMail}" id="inlineRadio2"
+                           th:checked="${sendMail == False}" value="no" >
+                    <label class="form-check-label" th:for="*{sendMail}">미사용</label>
+                </div>
+            </div>
             <div class="text-end">
                 <a th:href="@{/employee/list}" class="btn btn-dark me-3">리스트</a>
                 <button type="submit" class="btn btn-refoam me-3">수정</button>
