--- a/src/main/resources/templates/order/orderList.html
+++ b/src/main/resources/templates/order/orderList.html
@@ -1,6 +1,6 @@
 <html layout:decorate="~{layout}" lang="ko" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 <div class="container mb-5" layout:fragment="content">
-    <h2 class="py-4">주문 리스트</h2>
+    <h2 class="my-4">주문 리스트</h2>
     <div class="table-responsive table-lg">
         <table class="table table-hover table-striped">
             <thead>
