main update yong

--- a/src/main/resources/templates/order/createOrderForm.html
+++ b/src/main/resources/templates/order/createOrderForm.html
@@ -22,7 +22,7 @@
                 <button type="submit" class="btn btn-primary btn-sm">생산 등록</button>
             </div>
         </form>
-        <div class="col-md-2"></div>
+        <div class="col-md-2"> <img src="/images/logo_aside.svg"> </div>
     </div>
 </div>
 </html>
